add render yaml

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         let cart = [];
 
         // === Загрузка товаров с backend ===
-        fetch('http://127.0.0.1:8000/products')
+        fetch('https://ishikawa-kusanagi.github.io/Tg-Constructor/')
             .then(res => res.json())
             .then(data => {
                 data.forEach(product => {
